app/main/default/objects/Test__c/Test__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_2__c</fullName>
        <label>Picklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Temp_Test</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestRequired_Picklist__c</fullName>
        <label>TestRequired Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_One__c</fullName>
        <label>Test One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test</label>
    <nameField>
        <label>Test Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <recordTypes>
        <fullName>RTOne</fullName>
        <active>true</active>
        <description>RTOne record type</description>
        <label>RTOne</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTTwo</fullName>
        <active>true</active>
        <label>RTTwo</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>