app/main/default/objects/Test__c/fields/IsTest__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>IsTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTest</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>