app/main/default/objects/Test__c/fields/Picklist_2__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Picklist_2__c</fullName>
        <label>Picklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Temp_Test</valueSetName>
        </valueSet>
    </fields>
</CustomObject>