app/main/default/objects/Test__c/fields/Test_One__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Test_One__c</fullName>
        <label>Test One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>