app/main/default/objects/Test__c/fields/TestRequired_Picklist__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TestRequired_Picklist__c</fullName>
        <label>TestRequired Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>