app/main/default/objects/Test__c/recordTypes/RTOne.recordType-meta.xml
<CustomObject>
    <recordTypes>
        <fullName>RTOne</fullName>
        <active>true</active>
        <description>RTOne record type</description>
        <label>RTOne</label>
    </recordTypes>
</CustomObject>