app/main/default/objects/Test__c/recordTypes/RTTwo.recordType-meta.xml
<CustomObject>
    <recordTypes>
        <fullName>RTTwo</fullName>
        <active>true</active>
        <label>RTTwo</label>
    </recordTypes>
</CustomObject>